<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dane</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bienvenida">Vamos a aprender las letras</string>
    <string name="dane">dane</string>
    <string name="menu">Menu</string>
    <string name="botonMenu1">Letras M - N - P - L</string>
    <string name="botonMenu2">Letras D - T- S</string>
    <string name="botonMenu3">Todas las letras</string>
    <string name="botonMenu4">Ayuda</string>
    <string name="title_activity_bienvenida">Bienvenida</string>
    <string name="title_activity_menu">Menú</string>
    <string name="title_activity_juego_imagenes">Conciencia fonológica</string>
    <string name="title_activity_ayuda">Ayuda</string>
    <string name="title_activity_juego_seleccion_letra">Percepción visual</string>
    <string name="title_activity_juego_dibujo">Grafomotricidad</string>
    <string name="descripcion_imagenes">Arrastra la imagen que empieza con el sonido</string>
    <string name="descripcion_imagenes2">Arrastra la imagen que termina con el sonido</string>
    <string name="descripcion_seleccion">Señala la letra que corresponda</string>
    <string name="home">Ir a Inicio</string>
    <string name="letra_m">M</string>
    <string name="letra_n">N</string>
    <string name="letra_p">P</string>
    <string name="letra_l">L</string>
    <string name="letra_d">D</string>
    <string name="letra_t">T</string>
    <string name="letra_s">S</string>
    <string name="separador_letra">|</string>
    <string name="ejercicio_1">1</string>
    <string name="ejercicio_2">2</string>
    <string name="ejercicio_3">3</string>
    <string name="titulo_imagenes">JUEGO DE IMÁGENES</string>

    <!-- Pantalla de AcercaDe -->
    <string name="titulo_about">Acerca de</string>
    <string name="texto_about">Este desarrollo se hizo en conjunto con GyL y la Escuela Diálogos para el proyecto DANE.</string>

    <!-- Pantalla de Ayuda -->
    <string name="texto_ayuda">Ayuda</string>
    <string name="logo_dane_ayuda">Logo de Dane</string>
    <string name="contenido_ayuda"><![CDATA[Estimados docentes y padres:</br></br>
El ejercicio de habilidades cognitivas (intelectuales) previas a la lectura formal, permite generar en el sistema cerebral las conexiones sinápticas esperables para crear bases sólidas para el momento en el que sí se necesite poner en práctica la lectoescritura. En esta aplicación se trabaja fundamentalmente el entrenamiento de la habilidad o conciencia fonológica, que es la capacidad para operar con los fonemas (sonido de las letras) en todas sus posibilidades. Cuando el niño logra desarrollar esta habilidad entenderá que estos fonemas se asocian a un grafema (letra escrita) y podrá leer.
También se ejercitarán habilidades grafomotoras que favorecerán la incorporación de la forma de la escritura de las letras.]]></string>

    <!-- Mensajes Toast -->
    <string name="toast_clic">click sobre el boton</string>

    <!-- Descripciones de imágenes -->
    <string name="imagen1">imagen 1</string>
    <string name="imagen2">imagen 2</string>
    <string name="imagen3">imagen 3</string>
    <string name="imagen4">imagen 4</string>
    <string name="imagen5">imagen 5</string>
    <string name="imagen6">imagen 6</string>
    <string name="letra">letra</string>
    <string name="siguiente_ejercicio">Siguiente ejercicio</string>
    <string name="title_exit_app">Salir</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_elegir_letra1">ElegirLetra1Activity</string>
    <string name="descripcion_elegir_letra1">Elegir una letra entre M, N, P y L</string>
    <string name="title_activity_elegir_letra_mnpl">Elegir letra</string>
    <string name="title_activity_elegir_letra_dts">Elegir letra</string>
    <string name="title_activity_elegir_juego">Elegir juego</string>

</resources>
