<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dane.com.gyl.dane.AboutActivity"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        android:id="@+id/banner_superior"
        android:background="#1A94C7"
        android:padding="10sp">

        <TextView android:text="@string/titulo_about" android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/texto_ayuda"
            android:textColor="#ffffff"
            android:textSize="36sp"
            android:textIsSelectable="false"
            android:layout_marginLeft="20sp"
            android:layout_gravity="center_vertical|left"
            android:gravity="left"
            android:layout_weight="0.50" />

        <ImageView
            android:layout_width="74dp"
            android:layout_height="72dp"
            android:id="@+id/imagen_logo"
            android:src="@drawable/bienvenida_logo"
            android:textAlignment="textEnd"
            android:baselineAlignBottom="false"
            android:contentDescription="@string/logo_dane_ayuda" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_about"
        android:id="@+id/textView"
        android:layout_below="@+id/banner_superior"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

</RelativeLayout>