<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dane.com.gyl.dane.JuegoImagenesActivity"
    android:background="#ffffff"
    android:id="@+id/fondo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resultado"
        android:textSize="40sp"
        android:layout_above="@+id/botonAvanzar"
        android:layout_centerHorizontal="true"
        android:textColor="#20A020" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/barra_ejercicios"
        android:padding="10sp"
        android:background="#DE3A11"
        android:baselineAligned="false"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_marginTop="3sp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_weight="0.4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letra_m"
                android:id="@+id/letra1"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:textIsSelectable="true"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separador_letra"
                android:id="@+id/separador1"
                android:layout_marginLeft="7sp"
                android:textSize="26sp"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letra_n"
                android:id="@+id/letra2"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:textIsSelectable="true"
                android:textStyle="bold"
                android:layout_marginLeft="7sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separador_letra"
                android:id="@+id/separador2"
                android:layout_marginLeft="7sp"
                android:textSize="26sp"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letra_p"
                android:id="@+id/letra3"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:textIsSelectable="true"
                android:textStyle="bold"
                android:layout_marginLeft="7sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separador_letra"
                android:id="@+id/separador3"
                android:layout_marginLeft="7sp"
                android:textSize="26sp"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letra_l"
                android:id="@+id/letra4"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:textIsSelectable="true"
                android:textStyle="bold"
                android:layout_marginLeft="7sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_gravity="right"
            android:layout_weight="0.4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ejercicio_1"
                android:id="@+id/ejercicio_1"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:textIsSelectable="true"
                android:textStyle="bold"
                android:layout_marginLeft="7sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separador_letra"
                android:id="@+id/separador4"
                android:layout_marginLeft="7sp"
                android:textSize="26sp"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ejercicio_2"
                android:id="@+id/ejercicio_2"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:textIsSelectable="true"
                android:textStyle="bold"
                android:layout_marginLeft="7sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separador_letra"
                android:id="@+id/separador5"
                android:layout_marginLeft="7sp"
                android:textSize="26sp"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ejercicio_3"
                android:id="@+id/ejercicio_3"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:textIsSelectable="true"
                android:textStyle="bold"
                android:layout_marginLeft="7sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="514dp"
        android:layout_marginTop="3dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignWithParentIfMissing="false"
        android:background="#FA8E29"
        android:baselineAligned="false"
        android:measureWithLargestChild="false"
        android:longClickable="false"
        android:layout_below="@+id/barra_ejercicios"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/naranja">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#FA8E29">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcion_imagenes"
                android:id="@+id/titulo"
                android:textColor="#000000"
                android:textSize="23sp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/letra"
                android:src="@drawable/m_amarilla"
                android:gravity="center"
                android:contentDescription="@string/letra" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/linearLayout"
                android:layout_gravity="center_vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imagen1"
                            android:src="@drawable/moto"
                            android:contentDescription="@string/imagen1"
                            android:background="@drawable/cuadrado_amarillo"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imagen2"
                            android:src="@drawable/calabaza"
                            android:contentDescription="@string/imagen2"
                            android:background="@drawable/cuadrado_amarillo"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:baselineAligned="false">


                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_weight="0.33"
                        android:gravity="center_horizontal">

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/botonHome"
                            android:src="@drawable/casita"
                            android:contentDescription="@string/home"
                            android:layout_alignBottom="@+id/naranja"
                            android:layout_centerHorizontal="true"
                            android:background="#fa8e29"
                            android:cropToPadding="false"
                            android:layout_gravity="bottom" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.34"
                        android:gravity="center_horizontal"
                        android:id="@+id/terceraImg">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imagen3"
                            android:src="@drawable/puerta"
                            android:contentDescription="@string/imagen3"
                            android:adjustViewBounds="false"
                            android:background="@drawable/cuadrado_amarillo"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:gravity="center_horizontal"
                        android:layout_weight="0.33">

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/botonAvanzar"
                            android:src="@drawable/flechita"
                            android:contentDescription="@string/siguiente_ejercicio"
                            android:layout_alignBottom="@+id/naranja"
                            android:layout_centerHorizontal="true"
                            android:background="#fa8e29"
                            android:layout_gravity="bottom" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

