<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dane.com.gyl.dane.JuegoDibujoActivity"
    android:background="#ff1c95c7"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <dane.com.gyl.dane.PaintView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:id="@+id/view" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:padding="10sp"
        android:background="#DE3A11"
        android:baselineAligned="false"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_marginTop="3sp" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_weight="0.4" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letra_m"
                android:id="@+id/letra1"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:textIsSelectable="true"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separador_letra"
                android:id="@+id/separador1"
                android:layout_marginLeft="7sp"
                android:textSize="26sp"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letra_n"
                android:id="@+id/letra2"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:textIsSelectable="true"
                android:textStyle="bold"
                android:layout_marginLeft="7sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separador_letra"
                android:id="@+id/separador2"
                android:layout_marginLeft="7sp"
                android:textSize="26sp"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letra_p"
                android:id="@+id/letra3"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:textIsSelectable="true"
                android:textStyle="bold"
                android:layout_marginLeft="7sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separador_letra"
                android:id="@+id/separador3"
                android:layout_marginLeft="7sp"
                android:textSize="26sp"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letra_l"
                android:id="@+id/letra4"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:textIsSelectable="true"
                android:textStyle="bold"
                android:layout_marginLeft="7sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_gravity="right"
            android:layout_weight="0.4" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ejercicio_1"
                android:id="@+id/ejercicio_1"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:textIsSelectable="true"
                android:textStyle="bold"
                android:layout_marginLeft="7sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separador_letra"
                android:id="@+id/separador4"
                android:layout_marginLeft="7sp"
                android:textSize="26sp"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ejercicio_2"
                android:id="@+id/ejercicio_2"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:textIsSelectable="true"
                android:textStyle="bold"
                android:layout_marginLeft="7sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separador_letra"
                android:id="@+id/separador5"
                android:layout_marginLeft="7sp"
                android:textSize="26sp"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ejercicio_3"
                android:id="@+id/ejercicio_3"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:textIsSelectable="true"
                android:textStyle="bold"
                android:layout_marginLeft="7sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/botonAvanzar"
        android:src="@drawable/flechita"
        android:layout_alignBottom="@+id/view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

<!--    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:background="@drawable/m_escrita"
        android:layout_above="@+id/botonAvanzar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:backgroundTint="#ff1c95c7"
        android:backgroundTintMode="screen"></FrameLayout>-->

</RelativeLayout>
